test: unit test upload

--- a/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.html
+++ b/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.html
@@ -48,8 +48,12 @@
 				placeholder="*Sharing Options"
 				[(ngModel)]="sharing">
 
-				<ansyn-combo-box-option value="Public" *ngFor="let share of sharingOptions" [disabled]="share === 'Private'">
-					{{share}}
+				<ansyn-combo-box-option value="public">
+					Public
+				</ansyn-combo-box-option>
+
+				<ansyn-combo-box-option value="private" [disabled]="true">
+					Private
 				</ansyn-combo-box-option>
 
 			</ansyn-combo-box>
