--- a/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.less
+++ b/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.less
@@ -27,7 +27,9 @@
 		display: flex;
 		flex-direction: column;
 		color: white;
-
+		.title {
+			margin-bottom: 10px;
+		}
 		.sensor-types {
 			max-height: 90px;
 			display: flex;
@@ -41,20 +43,3 @@
 	}
 }
 
-div.fileinput {
-	label {
-		input[type='file'] {
-			display: none;
-			background: transparent;
-		}
-		&:focus, &:hover {
-			outline: none;
-			box-shadow: 0px 0px 1px 0px white inset;
-		}
-		padding: 5px 0;
-	}
-}
-
-div.title {
-	margin-bottom: 10px;
-}
