remove tests sensor names

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1061,7 +1061,7 @@
   "uploadsConfig": {
       "apiUrl": "http://localhost:3000/upload",
       "sensorTypes": [ "UAV", "Satellite", "Aircraft", "Ballon", "Kite" ],
-      "sensorNames": ["AAAA", "BBBB"],
+      "sensorNames": [],
       "defaultSensorType": "UAV",
       "rulesLink": "http://google.com/"
    }
