remove tests ruleslink

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1063,6 +1063,6 @@
       "sensorTypes": [ "UAV", "Satellite", "Aircraft", "Ballon", "Kite" ],
       "sensorNames": [],
       "defaultSensorType": "UAV",
-      "rulesLink": "http://google.com/"
+      "rulesLink": "about:blank"
    }
 }
