--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1059,9 +1059,10 @@
   },
   "ORIENTATIONS": ["Align North", "User Perspective", "Imagery Perspective"],
   "uploadsConfig": {
-      "apiUrl": "http://localhost:3000/upload",
+      "apiUrl": "http://tb-server.webiks.com/v1/api/ansyn/upload",
       "sensorTypes": [ "UAV", "Satellite", "Aircraft", "Ballon", "Kite" ],
       "sensorNames": [],
+      "defaultSharing": "public",
       "defaultSensorType": "UAV",
       "rulesLink": "about:blank"
    }
