--- a/src/app/@ansyn/core/forms/combo-box/combo-box.component.html
+++ b/src/app/@ansyn/core/forms/combo-box/combo-box.component.html
@@ -5,9 +5,9 @@
 			[isActive]="optionsVisible"
 			[attr.tooltip-value]="comboBoxToolTipDescription || null"
 			tooltip-class="top"
-			[render]="render(selected)"
 			[icon]="icon"
 			(click)="toggleShow()">
+		<div class="render" [innerHTML]="renderSelected"></div>
 		<div class="placeholder" *ngIf="placeholder" [class.float]="selected || optionsVisible"> {{ placeholder }}</div>
 	</button>
 
