--- a/src/app/@ansyn/core/forms/combo-box/combo-box.component.less
+++ b/src/app/@ansyn/core/forms/combo-box/combo-box.component.less
@@ -93,3 +93,10 @@ div.placeholder {
 		color: rgba(255, 255, 255, 0.7);
 	}
 }
+
+div.render {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	height: 19px;
+}
