--- a/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.html
+++ b/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.html
@@ -52,7 +52,7 @@
 					Public
 				</ansyn-combo-box-option>
 
-				<ansyn-combo-box-option value="private" >
+				<ansyn-combo-box-option value="private" disabled>
 					Private
 				</ansyn-combo-box-option>
 
