--- a/src/app/@ansyn/core/forms/combo-box-option/combo-box-option.component.less
+++ b/src/app/@ansyn/core/forms/combo-box-option/combo-box-option.component.less
@@ -1,6 +1,9 @@
 :host {
 	display: block;
-	&.disabled {
+	/* temporary */
+	position: relative;
+	z-index: 1;
+	&[disabled] {
 		opacity: .6;
 		pointer-events: none;
 	}
