1 run / add task : moving code from the component controller to effects 2 remove task (not finished)

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -14,7 +14,7 @@
 	></ansyn-input>
 
 	<ansyn-combo-box
-		[(ngModel)]="algName"
+		[(ngModel)]="task.type"
 		(ngModelChange)="onAlgorithmChange()"
 		required
 		name="algorithm"
