remove task works in state + storage + shows modal

--- a/src/app/@ansyn/menu-items/algorithms/components/remove-task-modal/remove-task-modal.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/remove-task-modal/remove-task-modal.component.html
@@ -1,7 +1,7 @@
 <div class="remove-task-modal">
 	<form #f="ngForm"
 		  (ngSubmit)="onCancel()">
-
+		{{message}}
 		<div class="bottom-btns">
 			<button type="button" (click)="onCancel()">Cancel</button>
 			<button type="button" (click)="onOk()">OK</button>
