Setting initial (equal) table column widths

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-table/tasks-table.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-table/tasks-table.component.html
@@ -38,11 +38,11 @@
 			<div class="tasks-table-body-row-data">
 				<hr>
 
-				<div class="tasks-table-task-name-col">
+				<div class="tasks-table-body-col">
 					{{entities[id].name}}
 				</div>
 
-				<div class="tasks-table-task-name-col">
+				<div class="tasks-table-body-col">
 					{{ entities[id].type | translate}}
 				</div>
 
