--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1154,7 +1154,7 @@
     "delayMultiple": 300
   },
   "tbOverlaysSourceConfig": {
-    "baseUrl": "http://tb-server.webiks.com/api/ansyn/ansynService"
+    "baseUrl": "http://tb-server.webiks.com/v2/api/ansyn/layers"
   },
   "auth0Config": {
       "auth0Active": {{ getv "/ansyn/auth0/auth0Active" "false" }},
