--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -948,6 +948,9 @@
       ],
       "blacklist": []
     },
+    "TB": {
+    	"inActive": {{ getv "/ansyn/overlay/tb/inactive" "true" }},
+    }
     "OPEN_AERIAL": {
     	"inActive": {{ getv "/ansyn/overlay/open/aerial/inactive" "false" }},
 		"whitelist": [
