Add tb provider (#1899)
* (feat): added model for TBProvider

* (feat): added minimal functionality to the provider

* (fix): some pr requested rchanges

* (fix): some pr requested changes

* (feat): functioning provider

* (fix): deleted space

* (fix): added space

* (fix): added space

* added tbMapSourceProvider

* fix: tmpl

* not finished

* feat: tb model fetch tb layers

* fix: tmpl tb url

* Fix: tmpl file, getById api

* fix: CR request changes

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -292,6 +292,15 @@
 			]
 		  }
 	  },
+	   "TB": {
+		  "inActive": {{ getv "/ansyn/overlay/tb/inactive" "true" }},
+		  "treeViewItem": {
+		  "text":"TB",
+		  "value": 1,
+		  "collapsed": true,
+		  "children": []
+		  }
+	  },
       "PLANET": {
         "inActive": {{ getv "/ansyn/overlay/planet/inactive" "false" }},
         "treeViewItem": {
@@ -939,6 +948,9 @@
       ],
       "blacklist": []
     },
+    "TB": {
+    	"inActive": {{ getv "/ansyn/overlay/tb/inactive" "true" }},
+    }
     "OPEN_AERIAL": {
     	"inActive": {{ getv "/ansyn/overlay/open/aerial/inactive" "false" }},
 		"whitelist": [
@@ -1049,6 +1061,9 @@
     "apiKey": "98d4e5a377594e7b80f692d9d487ff26",
     "tilesUrl": "https://tiles.planet.com/data/v1/",
     "delayMultiple": 300
+  },
+  "tbOverlaysSourceConfig": {
+    "baseUrl": "http://tb-server.webiks.com/v2/api/ansyn/layers"
   },
   "auth0Config": {
       "auth0Active": {{ getv "/ansyn/auth0/auth0Active" "false" }},
