hot-fix: config tmpl

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -949,7 +949,7 @@
       "blacklist": []
     },
     "TB": {
-    	"inActive": {{ getv "/ansyn/overlay/tb/inactive" "true" }},
+    	"inActive": {{ getv "/ansyn/overlay/tb/inactive" "true" }}
     },
     "OPEN_AERIAL": {
     	"inActive": {{ getv "/ansyn/overlay/open/aerial/inactive" "false" }},
