build:libs fixes + tweaks

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -76,7 +76,7 @@
 		</div>
 	</div>
 
-	<div [class.invisible]="!algName">Note: this algorithm is only available for {{algorithmConfig?.maxOverlays}}
+	<div [class.invisible]="!task?.type">Note: this algorithm is only available for {{algorithmConfig?.maxOverlays}}
 		overlays</div>
 
 	<div class="big-font wide-underline margin"></div>
