CR fix: in the dialog, use OK as submit button

--- a/src/app/@ansyn/menu-items/algorithms/components/remove-task-modal/remove-task-modal.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/remove-task-modal/remove-task-modal.component.html
@@ -1,10 +1,10 @@
 <div class="remove-task-modal">
 	<form #f="ngForm"
-		  (ngSubmit)="onSubmit(false)">
+		  (ngSubmit)="onSubmit(true)">
 		{{message}}
 		<div class="bottom-btns">
 			<button type="button" (click)="onSubmit(false)">Cancel</button>
-			<button type="button" (click)="onSubmit(true)">OK</button>
+			<button type="submit">OK</button>
 		</div>
 	</form>
 </div>
