feat: settings store

--- a/src/app/@ansyn/menu-items/settings/settings/settings.component.html
+++ b/src/app/@ansyn/menu-items/settings/settings/settings.component.html
@@ -1,3 +1,6 @@
-<p>
-	settings works!
-</p>
+<div class="collection">
+	<ansyn-slider-checkbox [checked]="isAnaglyphEnabled$ | async"
+						   (checkedChange)="enableAnaglyph($event.target.checked)">
+		Ask for anaglyph (if available )
+	</ansyn-slider-checkbox>
+</div>
