--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -14,7 +14,7 @@
 	></ansyn-input>
 
 	<ansyn-combo-box
-		[(ngModel)]="algName"
+		[(ngModel)]="task.type"
 		(ngModelChange)="onAlgorithmChange()"
 		required
 		name="algorithm"
@@ -33,7 +33,7 @@
 
 	<div class=" small-padding-left margin">
 		<span>Pin Location</span>
-		<span class="pin" [class.done]="task.region" (click)="startDrawMode()"></span>
+		<span class="pin" [class.done]="task.state.region" (click)="startDrawMode()"></span>
 	</div>
 
 	<div class="big-font wide-underline margin"></div>
@@ -76,7 +76,7 @@
 		</div>
 	</div>
 
-	<div [class.invisible]="!algName">Note: this algorithm is only available for {{algorithmConfig?.maxOverlays}}
+	<div [class.invisible]="!task?.type">Note: this algorithm is only available for {{algorithmConfig?.maxOverlays}}
 		overlays</div>
 
 	<div class="big-font wide-underline margin"></div>
@@ -84,7 +84,7 @@
 	<div class="margin">The results will be available for download when the task is completed</div>
 
 	<div class="run-bar margin">
-		<button ansynButton [disabled]="f.invalid || hasError() || !task.region">Run Task</button>
+		<button ansynButton [disabled]="f.invalid || hasError() || !task.state.region">Run Task</button>
 		<div *ngIf="algorithmConfig">Time Estimation: {{timeEstimation}}m</div>
 	</div>
 
