Managing tasks pages navigation through the state, instead of event emitters

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form-page/tasks-form-page.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form-page/tasks-form-page.component.html
@@ -1,5 +1,3 @@
-<ansyn-tasks-form-page-header
-	(goto)="goto.emit($event)"
-></ansyn-tasks-form-page-header>
+<ansyn-tasks-form-page-header></ansyn-tasks-form-page-header>
 
 <ansyn-tasks-form></ansyn-tasks-form>
