--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-table-page/tasks-table-page.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-table-page/tasks-table-page.component.html
@@ -1,5 +1,3 @@
-<ansyn-tasks-table-page-header
-	(goto)="goto.emit($event)"
-></ansyn-tasks-table-page-header>
+<ansyn-tasks-table-page-header></ansyn-tasks-table-page-header>
 
 <ansyn-tasks-table></ansyn-tasks-table>
