1 Task form: adding view mode, for existing tasks 2 Tasks service: add loadCase, to read the full case (not just preview) 3 Task form: use loadCase to get the full case

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -1,7 +1,7 @@
 <form #f="ngForm" (ngSubmit)="onSubmit()">
 
 	<div class=" small-padding-left">Status</div>
-	<div class="big-font wide-underline small-padding-left margin">{{taskStatus}}</div>
+	<div class="big-font wide-underline small-padding-left margin">{{task.status}}</div>
 
 	<ansyn-input
 		[(ngModel)]="task.name"
@@ -84,7 +84,7 @@
 	<div class="margin">The results will be available for download when the task is completed</div>
 
 	<div class="run-bar margin">
-		<button ansynButton [disabled]="f.invalid || hasError() || !task.state.region">Run Task</button>
+		<button ansynButton [disabled]="f.invalid || hasError() || !task.state.region || viewOnly">Run Task</button>
 		<div *ngIf="algorithmConfig">Time Estimation: {{timeEstimation}}m</div>
 	</div>
 
