--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-table/tasks-table.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-table/tasks-table.component.html
@@ -43,7 +43,7 @@
 				</div>
 
 				<div class="tasks-table-body-col">
-					{{ entities[id].type | translate}}
+					{{ entities[id].algorithmName | translate}}
 				</div>
 
 				<div class="tasks-table-body-col">
