Adding a loader animation to task form

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -92,3 +92,5 @@
 	<div *ngIf="hasError()" class="errors">{{errorMsg}}</div>
 
 </form>
+
+<ansyn-loader id="ansyn-task-form-loader" [show]="loading"></ansyn-loader>
