--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.less
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.less
@@ -89,3 +89,11 @@ ansyn-combo-box {
 .errors {
 	color: red;
 }
+
+/deep/ ansyn-loader#ansyn-task-form-loader {
+	.loader-1 {
+		.loader-outter, .loader-inner {
+			border-color: yellow;
+		}
+	}
+}
