Adding a loader animation to tasks table

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-table/tasks-table.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-table/tasks-table.component.html
@@ -84,3 +84,5 @@
 							 (submit)="onModalResult($event)"
 	></ansyn-remove-task-modal>
 </ansyn-modal>
+
+<ansyn-loader id="ansyn-tasks-table-loader" [show]="isLoading$ | async"></ansyn-loader>
