--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-table/tasks-table.component.less
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-table/tasks-table.component.less
@@ -184,3 +184,11 @@ p.no-tasks {
 	color: white;
 	padding: 20px 0;
 }
+
+/deep/ ansyn-loader#ansyn-tasks-table-loader {
+	.loader-1 {
+		.loader-outter, .loader-inner {
+			border-color: yellow;
+		}
+	}
+}
