1904 show algorithm task run data (#1954)
* Save selected task id in the state

* Managing tasks pages navigation through the state, instead of event emitters

* 1 Task form: adding view mode, for existing tasks
2 Tasks service: add loadCase, to read the full case (not just preview)
3 Task form: use loadCase to get the full case

* Refactoring task-form to bind to the state. Also keeping a currentTask entity in the state.

* Cancel saving region length in the state (it is a redundancy)

* Remove current task from state, when closing the form. This will also remove the related annotation of the visualizer.

* Saving the task's overlays as diluted overlays. Conversion to and fro.

* Adding a check, whether the active overlays is one of the chosen overlays for the task

* mergeMap -> switchMap

* Eliminating duplicate invoking of loadTask()

* Show a vertical scrollbar in small screens

* Adding a loader animation to task form

* Adding a loader animation to tasks table (not finished)

* Adding a loader animation to tasks table

* Unit tests + libs

* Unit tests + libs (cont.)

* Fix a strange error that got into tsconfig.json

* CR fixes (not finished)

* CR fixes (cont.)

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -4,7 +4,8 @@
 	<div class="big-font wide-underline small-padding-left margin">{{taskStatus}}</div>
 
 	<ansyn-input
-		[(ngModel)]="task.name"
+		[(ngModel)]="taskName"
+		(input)="onTaskNameChange()"
 		required
 		[white]="true"
 		name="name"
@@ -14,8 +15,8 @@
 	></ansyn-input>
 
 	<ansyn-combo-box
-		[(ngModel)]="task.type"
-		(ngModelChange)="onAlgorithmChange()"
+		[(ngModel)]="algName"
+		(ngModelChange)="onAlgorithmNameChange()"
 		required
 		name="algorithm"
 		[color]="'transparent'"
@@ -33,7 +34,7 @@
 
 	<div class=" small-padding-left margin">
 		<span>Pin Location</span>
-		<span class="pin" [class.done]="task.state.region" (click)="startDrawMode()"></span>
+		<span class="pin" [class.done]="currentTaskRegion$ | async" (click)="startDrawMode()"></span>
 	</div>
 
 	<div class="big-font wide-underline margin"></div>
@@ -76,7 +77,7 @@
 		</div>
 	</div>
 
-	<div [class.invisible]="!task?.type">Note: this algorithm is only available for {{algorithmConfig?.maxOverlays}}
+	<div [class.invisible]="!algName">Note: this algorithm is only available for {{algName ? algorithms[algName].maxOverlays : '??'}}
 		overlays</div>
 
 	<div class="big-font wide-underline margin"></div>
@@ -84,10 +85,12 @@
 	<div class="margin">The results will be available for download when the task is completed</div>
 
 	<div class="run-bar margin">
-		<button ansynButton [disabled]="f.invalid || hasError() || !task.state.region">Run Task</button>
-		<div *ngIf="algorithmConfig">Time Estimation: {{timeEstimation}}m</div>
+		<button ansynButton [disabled]="f.invalid || hasError() || !(currentTaskRegion$ | async) || !(isNewTask$ | async)">Run Task</button>
+		<div *ngIf="algName">Time Estimation: {{timeEstimation$ | async}}m</div>
 	</div>
 
 	<div *ngIf="hasError()" class="errors">{{errorMsg}}</div>
 
 </form>
+
+<ansyn-loader id="ansyn-task-form-loader" [show]="loading"></ansyn-loader>
