feat(planet): data input filter with others

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -352,7 +352,13 @@
                 "value": {
                   "sensorType": "Sentinel2L1C"
                 }
-              }
+              },
+			  {
+				  "text": "Others",
+				  "value": {
+					"sensorType": "others"
+				  }
+				}
             ]
           }
         },
