move fillNstroke to own component

--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
@@ -13,6 +13,8 @@
 				class="icon-tools-ruler"></i></button>
 			<button [class.active]="clickMenuProps.showLabel" (click)="toggleLabel()"><i
 				class="icon-annotation-label"></i></button>
+			<button class="" ><i class="icon-annotation-color"></i></button>
+			<button class=""><i class="icon-annotation-weight"></i></button>
 			<button class='removeFeature' (click)="removeFeature()"><i class="icon-close"></i></button>
 		</div>
 	</div>
