--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -55,27 +55,33 @@
 			<span class="icon-annotation-color" tooltip-value="Color" tooltip-class="bottom"></span>
 		</button>
 
-		<div class="list color-selection-expand" *ngIf="selectedBox === SelectionBoxTypes.ColorPicker">
+		<ansyn-annotations-color
+			[show]="selectedBox === SelectionBoxTypes.ColorPicker"
+			[properties]="annotationProperties"
+			(activeChange)="activeChange($event)"
+			(colorChange)="colorChange($event)"
+		></ansyn-annotations-color>
+		<!--<div class="list color-selection-expand" *ngIf="selectedBox === SelectionBoxTypes.ColorPicker">-->
 
-			<ansyn-color-picker
-				label="Fill"
-				[color]="annotationProperties.fill"
-				[active]="Boolean(annotationProperties['fill-opacity'])"
-				[activeDisabled]="!(annotationProperties['stroke-opacity'])"
-				(activeChange)="changeFillShown($event)"
-				(colorChange)="changeFillColor($event)">
-			</ansyn-color-picker>
+			<!--<ansyn-color-picker-->
+				<!--label="Fill"-->
+				<!--[color]="annotationProperties.fill"-->
+				<!--[active]="Boolean(annotationProperties['fill-opacity'])"-->
+				<!--[activeDisabled]="!(annotationProperties['stroke-opacity'])"-->
+				<!--(activeChange)="changeFillShown($event)"-->
+				<!--(colorChange)="changeFillColor($event)">-->
+			<!--</ansyn-color-picker>-->
 
-			<ansyn-color-picker
-				label="Stroke"
-				[color]="annotationProperties.stroke"
-				[active]="Boolean(annotationProperties['stroke-opacity'])"
-				[activeDisabled]="!(annotationProperties['fill-opacity'])"
-				(colorChange)="changeStrokeColor($event)"
-				(activeChange)="changeStrokeShown($event)">
-			</ansyn-color-picker>
+			<!--<ansyn-color-picker-->
+				<!--label="Stroke"-->
+				<!--[color]="annotationProperties.stroke"-->
+				<!--[active]="Boolean(annotationProperties['stroke-opacity'])"-->
+				<!--[activeDisabled]="!(annotationProperties['fill-opacity'])"-->
+				<!--(colorChange)="changeStrokeColor($event)"-->
+				<!--(activeChange)="changeStrokeShown($event)">-->
+			<!--</ansyn-color-picker>-->
 
-		</div>
+		<!--</div>-->
 	</li>
 
 </ul>
