add a annotation-weight components

--- a/src/app/@ansyn/core/components/annotations-weight/annotations-weight.component.less
+++ b/src/app/@ansyn/core/components/annotations-weight/annotations-weight.component.less
@@ -17,7 +17,8 @@ div.list {
 		}
 	}
 
-	&.color-selection-expand.open {
-		visibility: visible;
+	&.line-width-expand {
+		width: 100%;
+		outline: none;
 	}
 }
