--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
@@ -36,7 +36,7 @@
 				align-items: center;
 				right: 0;
 				top: 0;
-
+				margin-bottom: 0;
 				transform: translate(calc(~'100% + 15px'), -12px);
 
 				button {
@@ -62,6 +62,9 @@
 					&.active, &:hover {
 						background-color: rgb(41, 127, 155);
 					}
+				}
+				p {
+					margin: 0px;
 				}
 			}
 		}
