--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
@@ -12,9 +12,23 @@
 			<button [class.active]="clickMenuProps.showMeasures" (click)="toggleMeasures()"><i
 				class="icon-tools-ruler"></i></button>
 			<button [class.active]="clickMenuProps.showLabel" (click)="toggleLabel()"><i
-				class="icon-annotation-label"></i></button>
-			<button class="" ><i class="icon-annotation-color"></i></button>
-			<button class=""><i class="icon-annotation-weight"></i></button>
+				class="icon-annotation-label"></i>
+			</button>
+			<p>
+				<button [class.active]="clickMenuProps.showColorPicker" (click)="toggleColorPicker()"><i
+					class="icon-annotation-color"></i></button>
+				<ansyn-annotations-color
+					[show]="clickMenuProps.showColorPicker"
+				></ansyn-annotations-color>
+			</p>
+			<p>
+				<button [class.active]="clickMenuProps.showWeight" (click)="toggleWeight()"><i
+					class="icon-annotation-weight"></i></button>
+				<ansyn-annotations-weight
+					[show]="clickMenuProps.showWeight"
+					(selectLineWidth)="selectLineWidth($event.width)">
+				</ansyn-annotations-weight>
+			</p>
 			<button class='removeFeature' (click)="removeFeature()"><i class="icon-close"></i></button>
 		</div>
 	</div>
@@ -24,6 +38,7 @@
 			   name="EditLabel">
 		<i (click)="updateLabel()" class="icon-edit"></i>
 	</form>
+
 
 </div>
 
